tests/regression/errors/basic/import_error_19.csd
// Import error test 19
yeet "nonexistent_module_19"
sus result drip = some_function(19)
